[gd_scene load_steps=7 format=3 uid="uid://ci0qpywh6ycgg"]

[ext_resource type="Script" path="res://Scripts/GUI/pause_menu_interface.gd" id="1_x15eo"]
[ext_resource type="Shader" path="res://Scenes/GUI/pause_menu_interface.gdshader" id="2_kqnyy"]
[ext_resource type="Texture2D" uid="uid://dr4o1m0dccj54" path="res://Images/GUI/GUI_elements/DialogueBoxSimple.png" id="3_xnl8b"]
[ext_resource type="PackedScene" uid="uid://dfo3vycoymbrt" path="res://Scenes/GUI/settings_menu_interface.tscn" id="4_rek8l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hrb5v"]
shader = ExtResource("2_kqnyy")
shader_parameter/amount = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4mhmt"]

[node name="Pause_menu_interface" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x15eo")

[node name="ColorRect" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_hrb5v")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -463.5
offset_top = -254.5
offset_right = 463.5
offset_bottom = 254.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xnl8b")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_4mhmt")

[node name="continue" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Продолжить"

[node name="settings" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Настройки"

[node name="quit" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Выйти
"

[node name="settings_menu_interface" parent="Control" instance=ExtResource("4_rek8l")]
visible = false
layout_mode = 1
offset_left = 41.0
offset_top = 68.0
offset_right = -30.0
offset_bottom = -68.0

[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/continue" to="Control" method="_on_continue_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/settings" to="Control" method="_on_settings_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/quit" to="Control" method="_on_quit_pressed"]
